Add files for ParallelTextSearch